--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ html {
 .section {
     margin: 10px 0;
     background-color: white;
-    box-shadow: 0 0 5px #ddd;
+    /* box-shadow: 0 0 5px #ddd; */
 }
 
 .section__header {
