--- a/css/tasks.css
+++ b/css/tasks.css
@@ -13,16 +13,21 @@
     border-bottom: 1px solid #ddd;
 }
 
-.tasks__item--done {
+.tasks__done {
     text-decoration: line-through;
 }
 
-.tasks__button {
-background: hsl(120, 61%, 34%);
-border: none;
+.tasks__button--done {
+    background: hsl(120, 61%, 34%);
+    color: white;
+    width: 30px;
+    height: 30px;
+    border: none;
 }
 
 .tasks__button--remove {
     background: red;
+    width: 30px;
+    height: 30px;
     border: none;
 }
