--- a/css/tasks.css
+++ b/css/tasks.css
@@ -13,14 +13,25 @@
     border-bottom: 1px solid #ddd;
 }
 
+.tasks__item--hidden {
+    display: none;
+}
+
+.tasks__content--done {
+    text-decoration: line-through;
+}
+
 .tasks__done {
     text-decoration: line-through;
 }
 
 .tasks__button {
+    color: white;
     width: 30px;
     height: 30px;
     border: none;
+    padding: 0;
+    transition: background 0.3s;
 }
 
 .tasks__button--toggleDone {
