--- a/css/section.css
+++ b/css/section.css
@@ -1,22 +1,28 @@
-.container {
-    max-width: 900px;
-    margin: 0 auto;
-    padding: 20px;
-    background-size: cover;
-    background-position: center;
-}
-
 .section {
     margin: 10px 0;
-    background-color: white;
-    box-shadow: 0px 0px 5px #ddd;
+    background: white;
+    box-shadow: 0 0 5px #ddd;
 }
 
 .section__header {
-    font-size: 20px;
-    padding: 20px;
-    margin: 0;
     border-bottom: 1px solid #ddd;
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-gap: 20px;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px;
+}
+
+@media(max-width: 767px) {
+    .section__hidden {
+        grid-template-columns: 1fr;
+    }
+}
+
+.section__title {
+    font-size: 25px;
+    margin: 0;
 }
 
 .section__body {
