--- a/css/tasks.css
+++ b/css/tasks.css
@@ -31,7 +31,7 @@
     height: 30px;
     border: none;
     padding: 0;
-    transition: background 0.3s;
+    transition: color 0.3s;
 }
 
 .tasks__button--toggleDone {
