correct grid in section

--- a/css/section.css
+++ b/css/section.css
@@ -7,7 +7,7 @@
 .section__header {
     border-bottom: 1px solid #ddd;
     display: grid;
-    grid-template-columns: auto auto;
+    grid-template-columns: 1fr;
     grid-gap: 20px;
     justify-content: space-between;
     align-items: center;
