--- a/css/buttons.css
+++ b/css/buttons.css
@@ -1,6 +1,8 @@
 .buttons {
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
 }
 
 .buttons__button {
